--- a/templates/exp.html
+++ b/templates/exp.html
@@ -19,6 +19,7 @@
 		<script src="/static/lib/backbone-min.js" type="text/javascript"> </script>
 		<script src="/static/lib/d3.v3.min.js" type="text/javascript"> </script>
         <script src="/static/lib/babel.min.js" type="text/javascript"> </script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 
 		<script type="text/javascript">
 			// These fields provided by the psiTurk Server
